Update to match changes in figmaPlus API

--- a/src/figma-plugin-ui.scss
+++ b/src/figma-plugin-ui.scss
@@ -6,7 +6,7 @@
   .scrollable {
     padding: 24px;
     flex-basis: calc(100% - 66px);
-    overflow-y: scroll;
+    overflow: hidden scroll;
   }
 
   .empty {
